ZH/5.0/版本日志/README.md
## 概述

蓝鲸智云软件社区版版本日志

根据当前版本情况，实时更新。包括内测中的版本情况。

每个软件包包含后台的若干模块和配套的SaaS应用。
由于SaaS应用变更频繁，可从[S-mart市场](http://bk.tencent.com/s-mart/)随时更新。

#### 版本日志标志说明

- 【变更】产品的推出，替换，下架等重大操作。
- 【新增】产品功能点
- 【优化】产品功能点
- 【修复】产品功能点

#### 版本对比

**后台模块对比**


| 子模块         | 备注                        |5.1版本号| 5.1版本号 | 5.0版本号 | 4.1版本号 | 4.0版本号 |
| -------------- | --------------------------- |-----| --------- | --------- | --------- | --------- |
| src            | 程序包                      |5.1.27| 5.1.26    | 5.0.3     | 4.1.16    | 4.0.15    |
| common         | 公共组件包                  |2.0.3| 2.0.3     | 1.0.0     | 无        | 无        |
| gse            | 管控平台                    |3.4.91| 3.4.91     | 3.3.6     | 3.2.12    | 3.1.10    |
| cmdb           | 配置平台                    |3.2.21| 3.2.21    | 3.2.2     | 0.0.42    | 0.0.34    |
| job            | 作业平台                    |5.0.22| 5.0.22    | 5.0.2     | 4.3.3     | 4.2.3     |
| open_paas      | PaaS平台                    |3.2.6061| 3.2.524   | 3.0.94    | 3.0.83    | 3.0.31    |
| paas_agent     | PaaS平台                    |3.1.0213| 3.1.0212  | 3.0.8     | 3.0.8     | 3.0.8     |
| license        | 证书服务                    |3.1.4| 3.1.4     | 3.1.4     | 3.1.4     | 3.1.4     |
| bkdata/dataapi | 数据基础模块API服务         |1.3.31| 1.3.31    | 1.3.16    | 1.2.105   | 1.2.105   |
| bkdata/databus | 数据基础模块总线服务        |1.2.33| 1.2.33    | 1.2.30    | 1.2.23    | 1.2.23    |
| bkdata/monitor | 蓝鲸监控后台模块            |2.5.35| 2.5.35    | 0.2.7     | 0.2.6     | 0.0.19    |
| fta            | 故障自愈后台模块            |5.1.50| 5.1.50    | 5.1.11    | 4.1.12    | 3.1.18    |
| bknetwork      | 网络管理（可源科技提供）    |无| 无        | 3.6.1     | 3.6.1     | 3.6.1     |
| cicdkit        | CICDKit（嘉为科技合作开发） |无| 无        | 1.0.0     | 1.0.0     | 无        |

#
**SaaS应用对比**


| 子模块           | 备注      | 5.1版本号 | 5.0版本号 | 4.1版本号 | 4.0版本号 |
| ---------------- | --------- | --------- | --------- | --------- | --------- |
| bk_fta_solutions | 故障自愈  |  5.1.43   | 5.1.14    | 4.1.15    | 4.1.3     |
| bk_monitor       | 蓝鲸监控  |  2.5.122  | 1.4.82    | 1.4.73    | 1.0.38    |
| bk_log_search    | 日志检索  |  2.1.60   | 2.1.53    | 1.1.24    | 1.1.22    |
| bk_nodeman       | 节点管理  |  1.3.258  | 1.1.12    | 1.0.80    | 无        |
| bk_sops          | 标准运维  |  3.3.27   | 3.1.39    | 3.1.32    | 无        |

#### 更多操作
* [版本反馈](http://bk.tencent.com/s-mart/community)
* 客服 QQ：800802001
* 蓝鲸社区版交流1群：[495299374（点击加入群聊）](https://jq.qq.com/?_wv=1027&k=52atecL)
* 客服邮箱：contactus\_bk@tencent.com
